--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,71 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap");
 .App {
   text-align: center;
 }
-body{
+body,
+html {
+  height: 100%;
+  margin: 0;
   background-image: url("/src/img/nightBg.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  font-family: "Nunito Sans", sans-serif;
 }
-.SidePanel{
-  width: 520px;
-  height: 840px;
-  background: transparent linear-gradient(149deg, #70707066 0%, #3838382E 100%) 0% 0% no-repeat padding-box;
+.SidePanel {
+  margin: 5% 3%;
+  width: 720px;
+  height: 1040px;
+  background: transparent linear-gradient(149deg, #70707066 0%, #3838382e 100%)
+    0% 0% no-repeat padding-box;
   box-shadow: 15px 15px 15px #00000029;
   border: 1px solid #70707040;
   border-radius: 30px;
   opacity: 1;
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
+  float: left;
+}
+
+.Card {
+  top: 320px;
+  left: 680px;
+  width: 520px;
+  height: 480px;
+  background: transparent linear-gradient(132deg, #70707066 0%, #3838382e 100%)
+    0% 0% no-repeat padding-box;
+  box-shadow: 15px 15px 15px #00000029;
+  border: 1px solid #70707040;
+  border-radius: 30px;
+  opacity: 1;
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  margin: 80px;
+}
+
+.ConditionCards {
+  display: flexbox;
+}
+
+.ConditionCards {
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  align-content: flex-start;
+  width: 65%;
+  height: 80vh;
+  overflow: auto;
+  flex-direction: row;
+}
+
+.Title {
+  text-align: left;
+  font-size: 49px;
+}
+.ForecastMenu{
+  text-align: left;
+  font-size: 49px;
+  font-weight: bold;
 }
