--- a/src/App.css
+++ b/src/App.css
@@ -8,15 +8,16 @@ html {
   margin: 0;
   background-image: url("/src/img/nightBg.jpg");
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-size: cover;
   color: white;
   font-family: "Nunito Sans", sans-serif;
 }
 .SidePanel {
-  margin: 5% 3%;
-  width: 720px;
-  height: 1040px;
+  margin-left: 3%;
+  margin-right: 3%;
+  width: 520px;
+  height: 840px;
   background: transparent linear-gradient(149deg, #70707066 0%, #3838382e 100%)
     0% 0% no-repeat padding-box;
   box-shadow: 15px 15px 15px #00000029;
@@ -31,17 +32,31 @@ html {
 .Card {
   top: 320px;
   left: 680px;
-  width: 520px;
-  height: 480px;
+  width: 320px;
+  height: 280px;
   background: transparent linear-gradient(132deg, #70707066 0%, #3838382e 100%)
     0% 0% no-repeat padding-box;
   box-shadow: 15px 15px 15px #00000029;
   border: 1px solid #70707040;
   border-radius: 30px;
   opacity: 1;
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(20px);
-  margin: 80px;
+  margin: 20px;
+}
+
+.CardTitle {
+  font: var(--unnamed-font-style-normal) normal
+    var(--unnamed-font-weight-normal) 14px/26px
+    var(--unnamed-font-family-nunito-sans);
+  letter-spacing: var(--unnamed-character-spacing-0);
+  text-align: left;
+  text-decoration: underline;
+  font: normal normal normal 24px/32px Nunito Sans;
+  letter-spacing: 0px;
+  color: #ffffff;
+  opacity: 0.7;
+  padding-left: 10%;
+  margin-top: 4%;
+  margin-bottom: 0%;
 }
 
 .ConditionCards {
@@ -55,17 +70,337 @@ html {
   align-items: flex-start;
   align-content: flex-start;
   width: 65%;
-  height: 80vh;
+  height: 60vh;
   overflow: auto;
   flex-direction: row;
 }
 
 .Title {
   text-align: left;
-  font-size: 49px;
+  font-size: 28px;
 }
-.ForecastMenu{
+.ForecastMenu {
+  color: #707070;
   text-align: left;
-  font-size: 49px;
-  font-weight: bold;
+  font-size: 28px;
+  margin-left: 5%;
+}
+.InfoSide {
+  padding-left: 3%;
+  position: relative;
+  z-index: 1;
+}
+
+#Menu {
+  float: left;
+  color: white;
+  font-size: 24px;
+  margin-left: 8%;
+  margin-right: 0px;
+}
+
+.Header {
+  top: 0;
+  padding-top: 2%;
+  padding-bottom: 4%;
+}
+.location-search-input {
+  border: 0;
+  border-bottom: 2px solid gray;
+  outline: 0;
+  font-size: 20px;
+  color: white;
+  background: transparent;
+  width: 303px;
+  height: 41px;
+}
+.autocomplete-dropdown-container {
+  background: transparent linear-gradient(132deg, #70707066 0%, #3838382e 100%)
+    0% 0% no-repeat padding-box;
+  box-shadow: 15px 15px 15px #00000029;
+  border: 1px solid #70707040;
+  border-radius: 30px;
+  width: 303px;
+  font-size: 15px;
+  color: white;
+  z-index: 10;
+  position: relative;
+}
+
+.suggestion-item {
+  width: 303px;
+}
+#TempBtnC {
+  float: right;
+  width: 55px;
+  height: 55px;
+  font-size: 28px;
+  margin-right: 1.5%;
+  color: white;
+  background: #707070;
+  border-radius: 5px;
+  position: absolute;
+  right: 200px;
+}
+
+#TempBtnF {
+  float: right;
+  width: 55px;
+  height: 55px;
+  font-size: 28px;
+  margin-right: 5.4%;
+  color: white;
+  background: #707070;
+  border-radius: 5px;
+  position: absolute;
+  right: 50px;
+}
+
+.WeekCards {
+  width: 140px;
+  height: 175px;
+  margin-left: 2%;
+  background: transparent linear-gradient(213deg, #ffffff5e 0%, #808080 100%) 0%
+    0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px #00000029;
+  border-radius: 20px;
+  opacity: 1;
+  backdrop-filter: blur(30px);
+  -webkit-backdrop-filter: blur(30px);
+}
+
+.WeekCardsLayout {
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  align-content: flex-start;
+  width: 65%;
+  overflow: auto;
+  flex-direction: row;
+  margin: 0%;
+  margin-top: 2%;
+  margin-left: -8%;
+}
+
+.City {
+  margin: 0;
+  font: normal normal bold 24px/32px Nunito Sans;
+  letter-spacing: 0px;
+  color: #ffffff;
+  opacity: 1;
+  line-height: 1.5;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.CurrTemp {
+  width: 232px;
+  height: 122px;
+  margin-left: 8%;
+  margin-bottom: 0%;
+  text-align: left;
+  font: normal normal normal 100px/122px Nunito Sans;
+  letter-spacing: 0px;
+  color: #ffffff;
+  opacity: 1;
+}
+.C {
+  font: normal normal normal 48px/66px Nunito Sans;
+  color: #ffffff;
+  opacity: 1;
+}
+
+.F {
+  font: normal normal normal 48px/66px Nunito Sans;
+  color: #ffffff;
+  opacity: 1;
+  top: -100px;
+}
+
+.Date {
+  font: var(--unnamed-font-style-normal) normal 600 36px/49px Open Sans;
+  letter-spacing: var(--unnamed-character-spacing-0);
+  text-align: left;
+  font: normal normal 600 36px/49px Open Sans;
+  letter-spacing: 0px;
+  color: #ffffff;
+  opacity: 1;
+  margin-left: 8%;
+  margin-top: 4%;
+  margin-bottom: 4%;
+}
+
+.HrLine {
+  content: " ";
+  display: block;
+  border-bottom: 2px solid #ffffff;
+  width: 400px;
+  margin-left: 4%;
+}
+
+.Rain {
+  width: 322px;
+  height: 45px;
+  font: var(--unnamed-font-style-normal) normal
+    var(--unnamed-font-weight-normal) 24px/32px
+    var(--unnamed-font-family-nunito-sans);
+  letter-spacing: var(--unnamed-character-spacing-0);
+  text-align: left;
+  font: normal normal normal 24px/32px Nunito Sans;
+  letter-spacing: 0px;
+  color: #ffffff;
+  opacity: 1;
+  display: inline;
+  margin-top: 20%;
+  vertical-align: middle;
+}
+
+.Desc {
+  margin-left: 2%;
+  font: var(--unnamed-font-style-normal) normal
+    var(--unnamed-font-weight-normal) 24px/32px
+    var(--unnamed-font-family-nunito-sans);
+  letter-spacing: var(--unnamed-character-spacing-0);
+  text-align: left;
+  font: normal normal normal 24px/32px Nunito Sans;
+  letter-spacing: 0px;
+  color: #ffffff;
+  opacity: 1;
+  display: inline;
+  vertical-align: middle;
+}
+
+.CardValue {
+  margin-left: 8%;
+  margin-bottom: 0%;
+  margin-top: 0%;
+  letter-spacing: var(--unnamed-character-spacing-0);
+  text-align: left;
+  font: normal normal normal 35px/57px Nunito Sans;
+  letter-spacing: 0px;
+  color: #ffffff;
+  opacity: 1;
+}
+
+.Sun {
+  letter-spacing: var(--unnamed-character-spacing-0);
+  text-align: left;
+  font: normal normal normal 24px/29px Nunito Sans;
+  letter-spacing: 0px;
+  color: #ffffff;
+  opacity: 1;
+  margin-left: 10%;
+  vertical-align: middle;
+}
+.Dir {
+  letter-spacing: var(--unnamed-character-spacing-0);
+  text-align: left;
+  font: normal normal normal 17px/22px Nunito Sans;
+  letter-spacing: 0px;
+  color: #ffffff;
+  opacity: 1;
+  margin-left: 18%;
+  margin-top: 0%;
+  margin-bottom: 0%;
+}
+
+.SunSvg {
+  width: 89px;
+  height: 64px;
+  vertical-align: middle;
+}
+
+.OneImg {
+  width: 215px;
+  height: 114px;
+}
+
+.ChanceOfRain {
+  width: 60px;
+  height: 45px;
+  display: inline;
+  vertical-align: middle;
+}
+
+.Inline {
+  text-align: left;
+  margin-left: 10%;
+  margin-top: 5%;
+}
+
+#Visibility {
+  padding-top: 6%;
+  width: 123px;
+  height: 96px;
+}
+#Humidity {
+  padding-top: 6%;
+  width: 92px;
+  height: 96px;
+}
+
+.MainWeatherIcon {
+  top: 225px;
+  left: 183px;
+  width: 263px;
+  height: 165px;
+}
+
+.DescWeatherIcon {
+  width: 40px;
+  height: 25px;
+  vertical-align: middle;
+  float: left;
+  margin-left: 2%;
+}
+
+.CityDiv {
+  width: 423px;
+  height: 140px;
+  margin-left: 8%;
+  margin-top: 4%;
+  margin-bottom: 4%;
+  position: relative;
+  line-height: 140px;
+  text-align: center;
+}
+
+.WeekWeatherIcon {
+  width: 72px;
+  height: 45px;
+  margin-left: 20%;
+  padding-bottom: 10px;
+}
+
+.WeekCardTitle {
+  text-align: center;
+  font: normal normal normal 24px/33px Nunito Sans;
+  letter-spacing: 0px;
+  color: #ffffff;
+  opacity: 1;
+  margin-bottom: 0px;
+}
+
+#Children {
+  align-self: center;
+}
+
+.WeekTemp {
+  text-align: center;
+  font: normal normal normal 20px/29px Nunito Sans;
+  letter-spacing: 0px;
+  color: #ffffff;
+  opacity: 1;
+  margin-bottom: 10px;
+}
+
+.FullSearchDiv {
+  width: 360px;
+  height: 41px;
+  margin: auto;
+}
+.SearchInputDiv {
+  float: right;
+  vertical-align: middle;
 }
