--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ html {
   margin-left: 3%;
   margin-right: 3%;
   width: 520px;
-  height: 840px;
+  height: 800px;
   background: transparent linear-gradient(149deg, #70707066 0%, #3838382e 100%)
     0% 0% no-repeat padding-box;
   box-shadow: 15px 15px 15px #00000029;
@@ -30,8 +30,8 @@ html {
 }
 
 .Card {
-  top: 320px;
-  left: 680px;
+  top: 280px;
+  left: 640px;
   width: 320px;
   height: 280px;
   background: transparent linear-gradient(132deg, #70707066 0%, #3838382e 100%)
@@ -40,7 +40,7 @@ html {
   border: 1px solid #70707040;
   border-radius: 30px;
   opacity: 1;
-  margin: 20px;
+  margin: 0.4%;
 }
 
 .CardTitle {
@@ -57,10 +57,6 @@ html {
   padding-left: 10%;
   margin-top: 4%;
   margin-bottom: 0%;
-}
-
-.ConditionCards {
-  display: flexbox;
 }
 
 .ConditionCards {
@@ -130,6 +126,7 @@ html {
 .suggestion-item {
   width: 303px;
 }
+
 #TempBtnC {
   float: right;
   width: 55px;
@@ -354,7 +351,11 @@ html {
   float: left;
   margin-left: 2%;
 }
-
+#GpsFixedIcon {
+  font-size: 40px;
+  float: left;
+  padding-top: 3%;
+}
 .CityDiv {
   width: 423px;
   height: 140px;
@@ -404,4 +405,166 @@ html {
 .SearchInputDiv {
   float: right;
   vertical-align: middle;
+}
+
+@media only screen and (max-width: 1024px) {
+  #TempBtnF {
+    float: right;
+    width: 35px;
+    height: 35px;
+    font-size: 18px;
+    margin-right: 5.4%;
+    position: absolute;
+    right: 20px;
+  }
+  #TempBtnC {
+    float: right;
+    width: 35px;
+    height: 35px;
+    font-size: 18px;
+    margin-right: 1.5%;
+    position: absolute;
+    right: 100px;
+  }
+  .WeekCards {
+    width: 140px;
+    height: 175px;
+  }
+
+  .WeekCardsLayout {
+    width: 45%;
+    margin: 0%;
+    margin-top: 4%;
+    margin-left: -4%;
+  }
+
+  .Card {
+    top: 280px;
+    left: 640px;
+    width: 320px;
+    height: 280px;
+    margin: 0.4%;
+    margin-bottom: 4%;
+  }
+
+  .ConditionCards {
+    width: 35%;
+  }
+  @media only screen and (max-width: 375px) {
+    .SidePanel {
+      margin-left: 6%;
+      margin-right: 6%;
+      margin-bottom: 6%;
+      width: 95%;
+      height: 800px;
+    }
+    .HrLine {
+      width: 100%;
+      margin-left: 0.2%;
+    }
+    .CityDiv {
+      width: 80%;
+      height: 140px;
+      margin-left: 8%;
+      margin-top: 4%;
+      margin-bottom: 4%;
+      position: relative;
+      line-height: 140px;
+      text-align: center;
+    }
+    .FullSearchDiv {
+      width: 85%;
+      margin-bottom: 5%;
+    }
+    .Header {
+      top: 0;
+      width: 400px;
+      padding-top: 2%;
+      padding-bottom: 2%;
+    }
+    #TempBtnF {
+      float: right;
+      width: 35px;
+      height: 35px;
+      font-size: 18px;
+      top: 3.5%;
+      right: 6.5%;
+      color: white;
+      background: #707070;
+      border-radius: 5px;
+      position: absolute;
+    }
+    #TempBtnC {
+      float: right;
+      width: 35px;
+      height: 35px;
+      font-size: 18px;
+      right: 0.5%;
+      top: 3.5%;
+      color: white;
+      background: #707070;
+      border-radius: 5px;
+      position: absolute;
+    }
+    .WeekCards {
+      width: 140px;
+      height: 175px;
+      margin-bottom: 20%;
+    }
+
+    .WeekCardsLayout {
+      width: 95%;
+      margin: 0%;
+      margin-top: 4%;
+      margin-left: 10%;
+    }
+
+    .Card {
+      top: 280px;
+      left: 640px;
+      width: 320px;
+      height: 280px;
+      margin-bottom: 4%;
+    }
+
+    .ConditionCards {
+      display: inline-flex;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      align-items: flex-start;
+      align-content: flex-start;
+      width: 85%;
+      flex-direction: row;
+    }
+    .SearchInputDiv {
+      float: right;
+      vertical-align: middle;
+    }
+    #GpsFixedIcon {
+      margin-top: 10%;
+      font-size: 30px;
+      float: left;
+    }
+    .location-search-input {
+      margin-top: 10%;
+      font-size: 15x;
+      width: 303px;
+      height: 41px;
+    }
+    .autocomplete-dropdown-container {
+      width: 303px;
+      font-size: 15px;
+      margin-bottom: 10%;
+    }
+    .suggestion-item {
+      width: 303px;
+    }
+    #Menu {
+      width: 85%;
+      color: white;
+      font-size: 18px;
+      margin-left: 2%;
+      margin-right: 0px;
+    }
+  }
 }
